--- a/index.html
+++ b/index.html
@@ -8,33 +8,35 @@
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" 
     crossorigin="anonymous">
 </head>
+
 <body>
-    <!-- heading tags -->
-    <div class="h1">this is a div with an h1 class</div>
-    <div class="h2">this is a div with an h2 class</div>
-    <div class="h3">this is a div with an h3 class</div>
+    <!-- basic buttons -->
+    <div class="h2">Buttons</div>
 
-    <!-- display headings -->
-    <h1 class="display-2">display 2 heading</h1>
-    <h1 class="display-6">display 6 heading</h1>
-    <p class="display-5">paragraph with display-6 class</p>
+    <button class="btn btn-primary">click me</button>
 
-    <!-- lead text & alignment -->
-    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, 
-    quas! Soluta laudantium autem quaerat ex quam totam voluptas iste ab?</p>
-    <h3 class="text-center">hello world</h3>
+    <!-- anchor tags as buttons -->
+    <h2>Links as button</h2>
+    <a href="#home" class="btn btn-secondary">Home</a>
 
-    <!-- text decoration & font weight -->
-    <div class="h4 text-decoration-underline text-center">sample text</div>
-    <div class="text-decoration-line-through">can't read this</div>
-    <p class="fw-bold">this text is bold</p>
+    <!-- button sizes -->
+    <h2>Button sizes</h2>
 
-    <!-- text colors -->
-    <p class="text-primary">My name is Johnson</p>
+    <button class="btn btn-lg btn-info">large info button</button>
+    <button class="btn btn-sm btn-info">small info button</button>
 
-    <!-- bg colors -->
-    <p class="text-white bg-primary text-center">hey there, you look gorgeous</p>
+    <!-- outlined styles -->
+    <h2>Button styles</h2>
+    <button class="btn btn-outline-info">Read more</button>
 
+    <!-- button groups -->
+    <h2>Button groups</h2>
+
+    <div class="btn-group">
+        <a href="#" class="btn btn-primary">Home</a>
+        <a href="#" class="btn btn-danger">About</a>
+        <a href="#" class="btn btn-secondary">Contact</a>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" 
     crossorigin="anonymous"></script>   
